test/performance/vectorization/vectorizeOnly/nonIterableErrorMessage/nonVectorizeOnlyInvalidIterable.chpl
// ensure we get the same error message when iterating over something that's
// not iterable whether we're using the vectorizeOnly or not.

for i in 1 do writeln(i);
